# bevy_oit

./: .gitignore  Cargo.toml  README.md
assets/: clear.wgsl  gooch_shading.wgsl  post_process_pass.wgsl
examples/: demo.rs  load_dxf.rs  many_spheres.rs  opaque_occlusion.rs  simple.rs  spheres.rs
examples/camera_controller/: mod.rs
examples/utils/: camera_controller.rs  gooch_material.rs  mod.rs
src/: camera_controller.rs  clear_pass.rs  lib.rs  main.rs  material.rs  node.rs  oit.wgsl  oit_draw.wgsl  oit_draw_bindings.wgsl  oit_node.rs  oit_phase.rs  oit_plugin.rs  oit_render.wgsl  pipeline.rs  post_process_pass.rs  utils.rs
src/custom_phase/: clear.wgsl  custom_draw.wgsl  mod.rs  node.rs  pipeline.rs  render_oit.wgsl
src/render_oit/: mod.rs
